--- a/src/pages/Dashboard.module.scss
+++ b/src/pages/Dashboard.module.scss
@@ -11,6 +11,10 @@
   padding-left: 2rem;
 }
 
+.chartsContainer {
+  padding: 2rem;
+}
+
 @media (max-width: 768px) {
   .statsContainer {
     margin-left: 0;
