--- a/src/components/dashboards/ChartBar/ChartBar.module.scss
+++ b/src/components/dashboards/ChartBar/ChartBar.module.scss
@@ -4,9 +4,10 @@
   margin-left: 240px;
   background-color: #ffffff;
   border-radius: 0.75rem;
-  box-shadow: 0 2px 6px rgba(0, 0, 0, 0.04);
+  box-shadow: rgba(0, 0, 0, 0.1) 0px 4px 6px -1px,
+    rgba(0, 0, 0, 0.06) 0px 2px 4px -1px;
   padding: 2rem;
-  width: calc(100vw - 240px);
+  // width: calc(100vw - 240px);
   box-sizing: border-box;
   gap: 1.5rem;
 }
