--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -5,7 +5,8 @@ $chip: #f3f4f6;
 $success: #16a34a;
 
 :root {
-  --font-family-base: "Roboto", sans-serif;
+  // --font-family-base: "Roboto", sans-serif;
+  --font-family-base: "Plus Jakarta Sans", sans-serif;
   /* Font scale based on the 16px browser default to ensure accessibility */
   --font-size-base: 1rem; /* 16px */
   --font-size-sm: 0.875rem; /* 14px */
@@ -25,8 +26,11 @@ $success: #16a34a;
   --spacing-4: 1.5rem; /* 24px */
   --spacing-5: 2rem; /* 32px */
 
-  --color-primary: #4f46e5;
-  --color-secondary: #9333ea;
+  // --color-primary: #4f46e5;
+  // --color-secondary: #9333ea;
+
+  --color-primary: #ffd400;
+  --color-secondary: #ffc800;
   --color-neutral: #f0f2ff;
   --color-text: #1f1f47;
   --color-text-secondary: #6b7280;
