--- a/src/styles/globals.scss
+++ b/src/styles/globals.scss
@@ -4,7 +4,7 @@
 html, body { height: 100%; }
 body{
   margin:0;
-  font-family:'Inter',system-ui,-apple-system,Segoe UI,Roboto,Helvetica,Arial,sans-serif;
+  font-family:$font-family-base,system-ui,-apple-system,Segoe UI,Roboto,Helvetica,Arial,sans-serif;
   color:$ink; background:#fff; overflow-x:hidden;
 }
 
