--- a/src/components/EditProfiles/StoreHeaderEdit/StoreHeaderEdit.module.scss
+++ b/src/components/EditProfiles/StoreHeaderEdit/StoreHeaderEdit.module.scss
@@ -9,7 +9,7 @@
   background-color: #ffffff;
   border-radius: 20px;
   box-shadow: rgba(99, 99, 99, 0.2) 0px 2px 8px 0px;
-  font-family: "Roboto", sans-serif;
+  font-family: "Plus Jakarta Sans", sans-serif;
 }
 
 .avatar-section {
