--- a/src/components/Homes/Home.module.scss
+++ b/src/components/Homes/Home.module.scss
@@ -17,7 +17,7 @@ $color-muted-text: rgba(255, 255, 255, 0.8);
   min-height: 100vh;
   background-color: $color-purple;
   color: $color-white;
-  font-family: "Roboto", sans-serif;
+  font-family: "Plus Jakarta Sans", sans-serif;
   position: relative;
   overflow: hidden;
 
