--- a/src/components/Missions/Mission.module.scss
+++ b/src/components/Missions/Mission.module.scss
@@ -11,7 +11,7 @@ $color-yellow: #ffda47;
   width: 100vw;
   min-height: 100vh;
   position: relative;
-  font-family: "Roboto", sans-serif;
+  font-family: "Plus Jakarta Sans", sans-serif;
 }
 
 .overlayOpacity {
