--- a/src/components/ProfileContent/Subscription.module.scss
+++ b/src/components/ProfileContent/Subscription.module.scss
@@ -5,7 +5,7 @@ $primary-color: #5b57ff; // Màu xanh đậm cho tiêu đề
   //   margin: 0 auto;
   padding: 0 20px;
   color: $primary-color;
-  font-family: "Roboto", sans-serif;
+  font-family: "Plus Jakarta Sans", sans-serif;
   min-width: 300px;
 }
 
