--- a/src/components/common/ActionButtons.module.scss
+++ b/src/components/common/ActionButtons.module.scss
@@ -4,7 +4,7 @@ $primary-hover: #694bf7; /* màu hover sáng hơn */
 $neutral-color: #555f8d; /* màu xám tím cho Delete */
 $neutral-hover: #444a6b; /* hover xám đậm hơn */
 $bg-disabled: #e2e8f0; /* background khi disabled (nếu cần) */
-$font-family: "Roboto", sans-serif;
+$font-family: "Plus Jakarta Sans", sans-serif;
 
 /* Container chứa cả ba nút (dùng flex để canh giữa) */
 .actionButtons-container {
