--- a/src/components/common/ImageUploader.module.scss
+++ b/src/components/common/ImageUploader.module.scss
@@ -5,7 +5,7 @@
 /* Biến chung */
 $primary-color: #5b57ff;
 $border-color: #cbd5e1;
-$font-family: "Roboto", sans-serif;
+$font-family: "Plus Jakarta Sans", sans-serif;
 $text-placeholder: #a0aec0;
 
 /* Uploader chính */
