--- a/src/components/common/MaxAttendeesInput.module.scss
+++ b/src/components/common/MaxAttendeesInput.module.scss
@@ -5,7 +5,7 @@
   display: flex;
   flex-direction: column;
   width: 100%; /* hoặc tuỳ chỉnh width ở component cha */
-  font-family: "Roboto", sans-serif;
+  font-family: "Plus Jakarta Sans", sans-serif;
 }
 
 /* Description (mô tả phụ) */
