--- a/src/components/common/PasteURL.module.scss
+++ b/src/components/common/PasteURL.module.scss
@@ -6,7 +6,7 @@ $bg-input: #ffffff;
 $input-focus-bg: #f5f7fb;
 $text-placeholder: #a0aec0;
 $text-count: #718096;
-$font-family: "Roboto", sans-serif;
+$font-family: "Plus Jakarta Sans", sans-serif;
 
 .pasteURL-container {
   display: flex;
