--- a/src/components/common/Select.module.scss
+++ b/src/components/common/Select.module.scss
@@ -3,7 +3,7 @@
 .container {
   position: relative;
   width: 240px; /* Bạn có thể thay đổi chiều rộng tuỳ ý */
-  font-family: "Roboto", sans-serif;
+  font-family: "Plus Jakarta Sans", sans-serif;
 }
 
 .label {
