--- a/src/components/common/TimeAvailability.module.scss
+++ b/src/components/common/TimeAvailability.module.scss
@@ -7,7 +7,7 @@ $grey-dark: #1e2a5c;
 $grey-light: #718096;
 $grey-border: #e2e8f0;
 $bg-white: #ffffff;
-$font-family: "Roboto", sans-serif;
+$font-family: "Plus Jakarta Sans", sans-serif;
 
 /* Container chính của toàn component */
 .timeAvailability-container {
