--- a/src/components/mystores/ThemesPreview/Default.module.scss
+++ b/src/components/mystores/ThemesPreview/Default.module.scss
@@ -11,7 +11,7 @@
   max-width: 500px;
   margin: 0 auto;
   padding: 16px;
-  font-family: var(--template-font-family, "Roboto", sans-serif);
+  font-family: var(--template-font-family, "Plus Jakarta Sans"), sans-serif;
   color: var(--template-text-color);
   background-color: var(--template-color-secondary);
 }
