--- a/src/components/mystores/ThemesPreview/Eclipse.module.scss
+++ b/src/components/mystores/ThemesPreview/Eclipse.module.scss
@@ -16,7 +16,7 @@
   z-index: 1000;
 
   color: var(--template-text-color);
-  font-family: var(--template-font-family, "Roboto", sans-serif);
+  font-family: var(--template-font-family, "Plus Jakarta Sans"), sans-serif;
 }
 
 /* Container cho avatar, hình tròn với viền mỏng */
