--- a/src/components/mystores/ThemesPreview/Kels.module.scss
+++ b/src/components/mystores/ThemesPreview/Kels.module.scss
@@ -16,7 +16,7 @@
   align-items: center;
   // background-color: #f4e9e9; /* Màu nền hồng nhạt */
   color: var(--template-text-color);
-  font-family: var(--template-font-family, "Roboto", sans-serif);
+  font-family: var(--template-font-family, "Plus Jakarta Sans"), sans-serif;
   // padding: 16px;
   width: 100%;
   max-width: 500px;
