--- a/src/components/mystores/ThemesPreview/Material.module.scss
+++ b/src/components/mystores/ThemesPreview/Material.module.scss
@@ -10,7 +10,7 @@
   flex-direction: column;
   gap: 24px;
   margin: 0 auto;
-  font-family: var(--template-font-family, "Roboto", sans-serif);
+  font-family: var(--template-font-family, "Plus Jakarta Sans"), sans-serif;
   padding: 16px;
   width: 100%;
   height: auto;
