--- a/src/components/mystores/ThemesPreview/Minima.module.scss
+++ b/src/components/mystores/ThemesPreview/Minima.module.scss
@@ -8,7 +8,7 @@
 .minima-wrapper {
   margin: 0 auto;
   background-color: var(--template-color-secondary);
-  font-family: var(--template-font-family, "Roboto", sans-serif);
+  font-family: var(--template-font-family, "Plus Jakarta Sans"), sans-serif;
   display: flex;
   flex-direction: column;
   gap: 24px;
