--- a/src/components/mystores/ThemesPreview/NightView.module.scss
+++ b/src/components/mystores/ThemesPreview/NightView.module.scss
@@ -15,7 +15,7 @@
 }
 
 .night-wrapper {
-  font-family: var(--template-font-family, "Roboto", sans-serif);
+  font-family: var(--template-font-family, "Plus Jakarta Sans"), sans-serif;
   color: var(--template-text-color);
   display: flex;
   flex-direction: column;
