--- a/src/components/mystores/ThemesPreview/Stone.module.scss
+++ b/src/components/mystores/ThemesPreview/Stone.module.scss
@@ -10,7 +10,7 @@
   // padding: 16px;
   margin: 0 auto;
   color: var(--template-text-color);
-  font-family: var(--template-font-family, "Roboto", sans-serif);
+  font-family: var(--template-font-family, "Plus Jakarta Sans"), sans-serif;
   box-shadow: 0 2px 8px rgba(0, 0, 0, 0.3);
   height: 100%;
   width: 100%;
