--- a/src/components/mystores/ThemesPreview/Tyla.module.scss
+++ b/src/components/mystores/ThemesPreview/Tyla.module.scss
@@ -11,7 +11,7 @@
   flex-direction: column;
   align-items: center;
   color: var(--template-text-color);
-  font-family: var(--template-font-family, "Roboto", sans-serif);
+  font-family: var(--template-font-family, "Plus Jakarta Sans"), sans-serif;
   padding-bottom: 40px;
   width: 100%;
   max-width: 500px;
