--- a/src/components/ui/Store/Store.module.scss
+++ b/src/components/ui/Store/Store.module.scss
@@ -16,8 +16,8 @@
   display: flex;
   flex-direction: column;
   gap: 16px;
-  font-family: ui-sans-serif, system-ui, -apple-system, "SF Pro Text",
-    "Segoe UI", Roboto, Helvetica, Arial;
+  font-family: 'Plus Jakarta Sans', ui-sans-serif, system-ui, -apple-system,
+    "SF Pro Text", "Segoe UI", Helvetica, Arial;
   color: var(--text);
 }
 
