--- a/src/pages/ProductCreate.module.scss
+++ b/src/pages/ProductCreate.module.scss
@@ -2,7 +2,7 @@
 .container {
   max-width: 800px;
   margin: 0 auto;
-  font-family: "Roboto", sans-serif;
+  font-family: "Plus Jakarta Sans", sans-serif;
   color: #333;
   background: #fff;
   padding: 20px;
