--- a/src/components/Authentications/Signup.module.scss
+++ b/src/components/Authentications/Signup.module.scss
@@ -26,7 +26,7 @@ $color-link: #4f46e5; // màu link
   background-color: $color-white;
   border-radius: 12px;
   box-shadow: 0 8px 24px rgba(0, 0, 0, 0.05);
-  font-family: "Roboto", sans-serif;
+  font-family: "Plus Jakarta Sans", sans-serif;
   position: relative;
 }
 
