--- a/src/components/CreateProducts/EmailCollection/EmailCollection.module.scss
+++ b/src/components/CreateProducts/EmailCollection/EmailCollection.module.scss
@@ -4,7 +4,7 @@
   display: flex;
   min-height: 100vh;
   width: 100%;
-  font-family: "Roboto", sans-serif;
+  font-family: "Plus Jakarta Sans", sans-serif;
 
   .main-content {
     flex: 1;
