--- a/src/components/common/DurationSelect.module.scss
+++ b/src/components/common/DurationSelect.module.scss
@@ -3,7 +3,7 @@
 .container {
   position: relative;
   width: 100%;
-  font-family: "Roboto", sans-serif;
+  font-family: "Plus Jakarta Sans", sans-serif;
 }
 
 /* Label (nếu cần style riêng) */
