--- a/src/components/common/FieldsSection.module.scss
+++ b/src/components/common/FieldsSection.module.scss
@@ -4,7 +4,7 @@
 .container {
   width: 100%;
   max-width: 700px;
-  font-family: "Roboto", sans-serif;
+  font-family: "Plus Jakarta Sans", sans-serif;
   color: #1e2a78; /* Xanh đậm cho tiêu đề */
 }
 
