--- a/src/components/common/ImagePicker.module.scss
+++ b/src/components/common/ImagePicker.module.scss
@@ -5,7 +5,7 @@ $primary-color: #5b57ff;
 $border-color: #cbd5e1;
 $modal-overlay-bg: rgba(0, 0, 0, 0.4);
 $modal-bg: #ffffff;
-$font-family: "Roboto", sans-serif;
+$font-family: "Plus Jakarta Sans", sans-serif;
 $text-placeholder: #a0aec0;
 $text-author: #ffffff;
 
