--- a/src/components/common/MeetingBreakSettings.module.scss
+++ b/src/components/common/MeetingBreakSettings.module.scss
@@ -5,7 +5,7 @@
   display: flex;
   flex-direction: column;
   width: 100%; /* Có thể truyền width tùy ý từ component cha */
-  font-family: "Roboto", sans-serif;
+  font-family: "Plus Jakarta Sans", sans-serif;
 }
 
 /* Tiêu đề */
