--- a/src/components/common/PickStyle.module.scss
+++ b/src/components/common/PickStyle.module.scss
@@ -8,7 +8,7 @@ $badge-color: #fff;
 .pickStyle-container {
   display: flex;
   flex-direction: column;
-  font-family: "Roboto", sans-serif;
+  font-family: "Plus Jakarta Sans", sans-serif;
   color: #1e2a5c;
 }
 
