--- a/src/components/common/TiktokShopBanner.scss
+++ b/src/components/common/TiktokShopBanner.scss
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Plus+Jakarta+Sans:wght@700&display=swap');
 
 .banner-container {
   display: flex;
@@ -6,7 +6,7 @@
   align-items: center;
   padding: 4rem 2rem;
   background-color: #7f5eff; // A purple shade from the image
-  font-family: 'Roboto', sans-serif;
+  font-family: 'Plus Jakarta Sans', sans-serif;
   color: white;
   min-height: 100vh;
   gap: 2rem;
