--- a/src/components/common/VariantTable.module.scss
+++ b/src/components/common/VariantTable.module.scss
@@ -10,7 +10,7 @@ $tag-border: #d0d0d0;
 /* Wrapper tổng */
 .wrapper {
   width: 100%;
-  font-family: "Roboto", sans-serif;
+  font-family: "Plus Jakarta Sans", sans-serif;
   color: $text-color;
   margin-bottom: 40px;
 }
