--- a/src/components/mystores/MyStore/DraggableList/DraggableList.module.scss
+++ b/src/components/mystores/MyStore/DraggableList/DraggableList.module.scss
@@ -25,7 +25,7 @@ $shadow-heavy: 0 10px 25px rgba(0, 0, 0, 0.15);
 
 .draggable-container {
   padding: 1rem;
-  font-family: "Roboto", sans-serif;
+  font-family: "Plus Jakarta Sans", sans-serif;
 }
 
 .items-list {
@@ -180,6 +180,15 @@ $shadow-heavy: 0 10px 25px rgba(0, 0, 0, 0.15);
   cursor: pointer;
   padding: 0.75rem 1rem;
   color: white;
+  font-weight: 600;
+}
+
+.add-template-btn {
+  height: 48px;
+  color: #3b82f6;
+  text-align: center;
+  margin: 1rem;
+  cursor: pointer;
   font-weight: 600;
 }
 
