--- a/src/components/mystores/MyStore/StoreHeader/StoreHeader.module.scss
+++ b/src/components/mystores/MyStore/StoreHeader/StoreHeader.module.scss
@@ -3,6 +3,7 @@
   border-radius: 8px;
   padding: 1rem;
   margin-bottom: 32px;
+  background-color: #fff;
   margin-top: 16px;
   box-shadow: rgba(0, 0, 0, 0.1) 0px 4px 6px -1px,
     rgba(0, 0, 0, 0.06) 0px 2px 4px -1px;
