--- a/src/components/mystores/Themes/Default.module.scss
+++ b/src/components/mystores/Themes/Default.module.scss
@@ -5,7 +5,7 @@
   height: 100%;
   margin: 0 auto;
   padding: 16px;
-  font-family: "Roboto", sans-serif;
+  font-family: var(--template-font-family, "Plus Jakarta Sans"), sans-serif;
   color: #333;
   background-color: #fff;
 }
