--- a/src/components/mystores/Themes/Eclipse.module.scss
+++ b/src/components/mystores/Themes/Eclipse.module.scss
@@ -7,7 +7,7 @@
   width: 100%;
   margin: 0 auto;
   color: #ffffff;
-  font-family: "Roboto", sans-serif;
+  font-family: var(--template-font-family, "Plus Jakarta Sans"), sans-serif;
   box-shadow: 0 8px 20px rgba(0, 0, 0, 0.2);
 }
 
