--- a/src/components/mystores/Themes/Stone.module.scss
+++ b/src/components/mystores/Themes/Stone.module.scss
@@ -4,7 +4,7 @@
   background-color: #121212;
   margin: 0 auto;
   color: #ffffff;
-  font-family: "Roboto", sans-serif;
+  font-family: var(--template-font-family, "Plus Jakarta Sans"), sans-serif;
   box-shadow: 0 2px 8px rgba(0, 0, 0, 0.3);
   height: 100%;
   width: 100%;
