--- a/src/components/mystores/ThemesPreview/Moderno.module.scss
+++ b/src/components/mystores/ThemesPreview/Moderno.module.scss
@@ -11,7 +11,7 @@
   align-items: center;
   background-color: var(--template-color-secondary);
   margin: 0 auto;
-  font-family: var(--template-font-family, "Roboto", sans-serif);
+  font-family: var(--template-font-family, "Plus Jakarta Sans"), sans-serif;
   padding: 16px;
   height: 100%;
   width: 100%;
