--- a/src/components/utils/Sidebar/Sidebar.module.scss
+++ b/src/components/utils/Sidebar/Sidebar.module.scss
@@ -58,6 +58,10 @@ $sidebar-width: 240px;
   width: 100%;
   margin-bottom: $spacing-2;
 
+  .label {
+    font-size: 16px;
+  }
+
   span {
     font-weight: 600;
   }
