--- a/src/pages/CheckoutPage.module.scss
+++ b/src/pages/CheckoutPage.module.scss
@@ -4,7 +4,7 @@
   margin: 0 auto;
   gap: 2rem;
   width: 100vw;
-  font-family: var(--template-font-family, sans-serif);
+  font-family: var(--template-font-family, 'Plus Jakarta Sans'), sans-serif;
   background-color: var(--template-color-secondary, #fff);
   color: var(--template-text-color, #000);
 
