--- a/src/pages/PrivacyPolicy/PrivacyPolicy.module.scss
+++ b/src/pages/PrivacyPolicy/PrivacyPolicy.module.scss
@@ -7,7 +7,7 @@
   max-width: 800px;
   margin: 0 auto;
   padding: 2rem;
-  font-family: "Roboto", sans-serif;
+  font-family: "Plus Jakarta Sans", sans-serif;
   color: #333;
   line-height: 1.6;
   padding-top: 100px;
