--- a/src/pages/ThankYouPage.module.scss
+++ b/src/pages/ThankYouPage.module.scss
@@ -3,7 +3,7 @@
   padding: 40px 20px;
   background-color: var(--template-color-secondary);
   color: var(--template-text-color);
-  font-family: var(--template-font-family, sans-serif);
+  font-family: var(--template-font-family, 'Plus Jakarta Sans'), sans-serif;
   text-align: center;
   display: flex;
   flex-direction: column;
