--- a/src/pages/UserPage.module.scss
+++ b/src/pages/UserPage.module.scss
@@ -7,7 +7,7 @@
   gap: 2rem;
   width: 100vw;
   min-height: 100dvh;
-  font-family: var(--template-font-family, sans-serif);
+  font-family: var(--template-font-family, 'Plus Jakarta Sans'), sans-serif;
   background-color: var(--template-color-secondary, #fff);
   color: var(--template-text-color, #000);
 
